apps/uptime-kuma/service.yml
apiVersion: v1
kind: Service
metadata:
  name: uptime-kuma-service
  namespace: kuma
spec:
  type: ClusterIP
  selector:
    app: uptime-kuma
  ports:
    - name: uptime-kuma
      port: 3001
      targetPort: 3001
