apps/uptime-kuma/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kuma-ingress
  namespace: kuma
  annotations:
    cert-manager.io/cluster-issuer: "custom-ca-issuer"
    nginx.ingress.kubernetes.io/server-snippet: |
      if ($scheme = http) {
        return 301 https://$host:8443$request_uri;
      }
spec:
  ingressClassName: nginx-internal
  tls:
    - hosts:
        - uptime.kvlk.local
      secretName: kuma-tls
  rules:
    - host: uptime.kvlk.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: uptime-kuma-service
                port:
                  number: 3001
