apps/uptime-kuma/route.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kuma
  namespace: kuma
spec:
  parentRefs:
    - name: eg-internal
      namespace: envoy-gateway-system
      sectionName: internal
  hostnames:
    - "uptime.kvlk.local"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: uptime-kuma-service
          port: 3001
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kuma-public
  namespace: kuma
spec:
  parentRefs:
    - name: eg
      namespace: envoy-gateway-system
      sectionName: uptime
  hostnames:
    - "uptime.kvlk.hu"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: uptime-kuma-service
          port: 3001
          weight: 1
      matches:
        - path:
            type: Exact
            value: /status/neoline
